debug profile, add links, add tooltip

--- a/source/_posts/AlgebraicGeometry/rational_geometry/817_10-11.md
+++ b/source/_posts/AlgebraicGeometry/rational_geometry/817_10-11.md
@@ -16,7 +16,7 @@ $$
 
 ## dimension of tangent space
 
-$$ \dim T\_{Mor(Y,x),[f]} \geq h^0(Y,f^*T_X) - h^1(Y,f^*T_X) $$
+$$ \mathrm{dim} T\_{Mor(Y,x),[f]} \geq h^0(Y,f^*T_X) - h^1(Y,f^*T_X) $$
 
 Inparticular, if $h^1(Y,f^*T_X)=0$, then smooth at $[f]$
 
