--- a/source/_posts/AlgebraicGeometry/rational_geometry/817_10-11.md
+++ b/source/_posts/AlgebraicGeometry/rational_geometry/817_10-11.md
@@ -10,17 +10,15 @@ date: 2023-10-11 13:39
 
 Goal: proof that
 
-$$
-T_{Mor(Y,x),[f]} \cong H^0(Y,\mathcal{H}om(f^*\Omega _X,\mathcal{O}_Y)
-$$
+$$ T_{Mor(Y,x),[f]} \cong H^0(Y,\mathcal{H}om(f^*\Omega _X,\mathcal{O}_Y) $$
 
 ## dimension of tangent space
 
-$$ \mathrm{dim} T\_{Mor(Y,x),[f]} \geq h^0(Y,f^*T_X) - h^1(Y,f^*T_X) $$
+$$ \dim T\_{Mor(Y,x),[f]} \geq h^0(Y,f^*T_X) - h^1(Y,f^*T_X) $$
 
 Inparticular, if $h^1(Y,f^*T_X)=0$, then smooth at $[f]$
 
 skip this proof.
 
-## $Mod p$ reduction
+## $\mathrm{Mod} p$ reduction
 
