Sync obsidian to wiki mv pictures

--- a/docs/clip/一篇看懂常用光位视听语言灯位图解.md
+++ b/docs/clip/一篇看懂常用光位视听语言灯位图解.md
@@ -9,7 +9,7 @@ category: redbook
 # 一篇看懂常用光位！视听语言
 灯位超全图解
 
-![Cover Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/0-1749732475391.jpg)
+![Cover Image](https://877675.xyz/0-1749732475391.jpg)
 逆光（背光）
 特点：光源位于被摄主体的正后方，面向摄像机，剪影效果，突出轮廓，隐藏细节。
 视听语言：神秘感与未知（如《降临》的开场场景），孤独感（如《银翼杀手》中的角色登场），希望与救赎（如《这个杀手不太冷》莱昂开门）。
@@ -54,14 +54,14 @@ category: redbook
 #摄影教学# #摄影灯光# #灯位图# #摄影干货# #灯光入门# #摄影布光#
 ```
 
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/0-1749732475391.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/1-1749732475711.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/2-1749732475731.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/3-1749732475752.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/4-1749732475770.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/5-1749732475823.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/6-1749732475845.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/7-1749732475869.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/8-1749732475887.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/9-1749732475909.jpg)
-![Image](https://hiraeth-picbed.oss-cn-beijing.aliyuncs.com/10-1749732475933.jpg)
+![Image](https://877675.xyz/0-1749732475391.jpg)
+![Image](https://877675.xyz/1-1749732475711.jpg)
+![Image](https://877675.xyz/2-1749732475731.jpg)
+![Image](https://877675.xyz/3-1749732475752.jpg)
+![Image](https://877675.xyz/4-1749732475770.jpg)
+![Image](https://877675.xyz/5-1749732475823.jpg)
+![Image](https://877675.xyz/6-1749732475845.jpg)
+![Image](https://877675.xyz/7-1749732475869.jpg)
+![Image](https://877675.xyz/8-1749732475887.jpg)
+![Image](https://877675.xyz/9-1749732475909.jpg)
+![Image](https://877675.xyz/10-1749732475933.jpg)
